--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div id="final" class="question" style="display:none;">
             <h2>💖 Поздравляем, Ира! Ты завершила квест! 🎉</h2>
             <p>Ты раскрыла все тайны! Через 5 секунд ты попадешь на особенную страницу... 😘💖</p>
-            <button onclick="window.location.href = 'https://example.com'">Перейти на следующую страницу 💕</button>
+            <button onclick="window.location.href = 'https://memozki.github.io/Love/'">Перейти на следующую страницу 💕</button>
         </div>
     </div>
 
